--- a/volume.yaml
+++ b/volume.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: factorio-server-data
+  namespace: factorio-server
   labels:
     app: factorio-server
 spec:
