--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,19 +3,25 @@ kind: Ingress
 metadata:
   name: factorio-server
   namespace: factorio-server
+  annotations:
+    cert-manager.io/cluster-issuer: ca-issuer
+    nginx.ingress.kubernetes.io/backend-protocol: HTTP
   labels:
     app: factorio-server
 spec:
+  ingressClassName: nginx
   rules:
     - host: factorio.spof.tech
       http:
         paths:
-          - backend:
+          - pathType: Prefix
+            backend:
               serviceName: factorio-server
               servicePort: 34197
     - host: factorio.spof.tech
       http:
         paths:
-          - backend:
+          - pathType: Prefix
+            backend:
               serviceName: factorio-server
               servicePort: 27015
