--- a/stateful-set.yaml
+++ b/stateful-set.yaml
@@ -16,6 +16,8 @@ spec:
       labels:
         app: factorio-server
     spec:
+      nodeSelector:
+        kubernetes.io/arch: amd64
       containers:
         - name: factorio-server
           image: "factoriotools/factorio:1.1.99"
