get bind from pod ip

--- a/stateful-set.yaml
+++ b/stateful-set.yaml
@@ -29,6 +29,11 @@ spec:
             - name: factorio-tcp
               containerPort: 27015
               protocol: TCP
+          env:
+            - name: BIND
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
           envFrom:
             - configMapRef:
                 name: factorio-config
