--- a/configmap.yaml
+++ b/configmap.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: factorio-server
 data:
   UPDATE_MODS_ON_START: "true"
-  GENERATE_NEW_SAVE: "true"
+  GENERATE_NEW_SAVE: "false"
   SAVE_NAME: "SPoF"
